--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+<link src="my.css" rel="stylesheet"> 
 <body>
 <h1><p align="center"><font color="yellow">Диплом</h1>
 <h1><p align="center">магистра</p></h1>
