--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <link src="my.css" rel="stylesheet"> 
-<body(color:"red")>
+<body color="red">
 <h1><p align="center"><font color="yellow">Диплом</h1>
 <h1><p align="center">магистра</p></h1>
 <h1><p align="center">с отличием</font></h1></p>
