--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
        Решение государственной экзаменационной комиссии
 присловоена квалификации
-протокол №1341535 от <05> 19.05.2015
+протокол №1341535 от "05" 19.05.2015
 Председатель ################
 Государственной #############
 экзаменационной комиссии #################
